# HCC_MVI_prediction

./: .gitignore  README.md  main.py  pyproject.toml
scripts/validate_ui/: ui.py
src/CT_preprocessing/: preprocessing_configs.py
src/CT_preprocessing/pipelines/: generate_data_info.py  slice_preprocessing.py
src/CT_preprocessing/utils/: path_modify_utils.py  preprocess_utils.py
