[project]
name = "hcc-mvi-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "nibabel>=5.3.2",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pydicom>=3.0.1",
    "pyyaml>=6.0.2",
    "radiomics>=0.1",
    "scikit-image>=0.25.2",
    "simpleitk>=2.5.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
]
